<?xml version="1.0" encoding="UTF-8"?>
<resources>

	<string name="app_name">Notetaker Ultra!</string>
	<string name="desc_change_note_colors">Change colors of note text box and font</string>
	<string name="desc_change_text_font">Change note font style (Monospace, etc)</string>
	<string name="desc_change_text_size">Change size of note font</string>
	<string name="key_chosen_file">example.notetakerultra.key_chosen_file</string>
	<string name="key_notes_location">example.notetakerultra.key_notes_location</string>
	<string name="key_pref_color">example.notetakerultra.KEY_PREF_COLOR</string>
	<string name="key_pref_font">example.notetakerultra.KEY_PREF_FONT</string>
	<string name="key_pref_text_size">example.notetakerultra.KEY_PREF_TEXT_SIZE</string>
	<string name="label_change_note_colors">Change note box color</string>
	<string name="label_change_text_font">Change text font</string>
	<string name="label_change_text_size">Change text size</string>
	<string name="menu_delete">Delete…</string>
	<string name="menu_new">New</string>
	<string name="menu_settings">Settings</string>
	<string name="message_delete_fail">Failed to delete %1$s</string>
	<string name="message_delete_success">%1$s deleted</string>
	<string name="message_give_filename">New note name</string>
	<string name="message_load_success">%1$s loaded successfully</string>
	<string name="message_new_file">&lt;New file&gt;</string>
	<string name="message_new_note_success">New note loaded</string>
	<string name="message_save_fail">Invalid save location</string>
	<string name="message_save_success">Note successfully saved to %1$s</string>
	<string name="message_select_file">Select a note file</string>
	<string name="message_uninit_val">&lt;Value not set&gt;</string>
	<string name="open_option">Open</string>
	<string name="save_option">Save</string>
	<string name="title_activity_file_chooser">FileChooserActivity</string>
	<string name="title_activity_note_editor">NoteEditor</string>
	<string name="title_activity_settings_activity">SettingsActivity</string>
	<string name="title_activity_settings_editor">SettingsEditor</string>
	<string name="key_pref_note_view_group">example.notetakerultra.KEY_PREF_NOTE_VIEW_GROUP</string>
	<string name="label_pref_note_view_group">Note view</string>
	
</resources>